--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -17,6 +17,8 @@ loggingInterceptor = "5.0.0-alpha.14"
 navigationComposeVersion = "2.8.0-beta04"
 materialIconsExtended = "1.7.0-beta04"
 mapsCompose = "5.0.4"
+mapsComposeWidgets = "5.0.4"
+mapsComposeUtils = "5.0.4"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -42,6 +44,8 @@ logging-interceptor = { group = "com.squareup.okhttp3", name = "logging-intercep
 navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "navigationComposeVersion" }
 androidx-material-icons-extended = { group = "androidx.compose.material", name = "material-icons-extended", version.ref = "materialIconsExtended" }
 maps-compose = { group = "com.google.maps.android", name = "maps-compose", version.ref = "mapsCompose" }
+maps-compose-widgets = { group = "com.google.maps.android", name = "maps-compose-widgets", version.ref = "mapsComposeWidgets" }
+maps-compose-utils = { group = "com.google.maps.android", name = "maps-compose-utils", version.ref = "mapsComposeUtils" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
